Finally fixed the projects on mobile

--- a/css/mainCSS.css
+++ b/css/mainCSS.css
@@ -9,7 +9,6 @@ body{
     background-size: cover;
     background-color: #fdfff4;
     height:100%;
-    /*overflow-x: hidden;*/
 }
 .main{
     width: 100%;
@@ -79,10 +78,10 @@ a:hover{
     color: #007bff;
 }
 #extra-margin{
-  margin-top: 20px;
+  margin-top: 40px;
 }
 #extra-margin2{
-  margin-top: 70px;
+  margin-top: 50px;
 }
 
 
@@ -93,7 +92,7 @@ a:hover{
 }
 .panel {
     margin-bottom: 40px;
-    width:18%;
+    width:100%;
     display: block;
 	  float:left;
     padding-right: 5%;
@@ -137,13 +136,15 @@ a:hover{
     transform: translateX(-50%);
     text-align: center;
     line-height: 35px;
+    width: 70%;
+    padding-bottom: 10px;
 }
 .description-position, .description-text{
-    font-size: 15px;
+    font-size: 13px;
     margin: 0;
     padding: 0;
     margin-bottom:.5vw;
-    font-family: 'Fjord One', serif;
+    font-family: 'B612', 'Fjord One', serif;
     text-align: center;
 }
 .col-sm-6{
@@ -151,6 +152,12 @@ a:hover{
 }
 .col-sm-4{
     padding: 0px 20px 20px 20px;
+}
+.project-item{
+    height: 400px;
+    width: 17.5%;
+    float: left;
+    padding-right: 75px;
 }
 .link{
   width: 60%;
@@ -167,14 +174,14 @@ a:hover{
 .panel_img{
   width: 120%;
   height: auto;
-  opacity: 0.60;
-  filter: alpha(opacity=60);
+  opacity: 0.55;
+  filter: alpha(opacity=55);
 }
 .panel_img_small{
   width: 60%;
   height: auto;
-  opacity: 0.60;
-  filter: alpha(opacity=60);
+  opacity: 0.55;
+  filter: alpha(opacity=55);
 }
 .row{
   left:54%;
@@ -184,12 +191,8 @@ a:hover{
 }
 
 @media (max-width: 1400px) {
-  .row{
-    left:53%;
-  }
-  .panel {
-      width:27%;
-      padding-right: 5%;
+  .project-item{
+      width: 23%;
   }
 }
 @media (max-width: 1070px) {
@@ -197,25 +200,30 @@ a:hover{
       font-size: 25px;
   }
   .description-position, .description-text{
-      font-size: 13px;
+      font-size: 10px;
+  }
+  .project-item{
+      padding-right: 45px;
   }
 }
 @media (max-width: 900px) {
-  .row{
-    left:52%;
+  .description-position, .description-text{
+      font-size: 12px;
   }
-  .panel {
-      width:40%;
-      padding-right: 10%;
+  .project-item{
+      width: 38%;
   }
 }
-@media (max-width: 625px) {
-  .row{
-    left:57.5%;
+@media (max-width: 650px) {
+  .description-title{
+      font-size: 30px;
   }
-  .panel {
-      width:80%;
-      padding-right: 10%;
+  .description-position, .description-text{
+      font-size: 15px;
+  }
+  .project-item{
+      width: 80%;
+      height: auto;
   }
   .intro{
       height:100vh;
